Version beta 3

- Applied Michal Levy's patch fixing FACILITIES-51
  "When using more than one session inside transaction, only first session is 
   registered in NH transaction context"

- Added more transactions test cases

- Applied Ernst Naezer's patch that adds support for configurable flushModes.

  On the facility configuration node, you can specify the following attribute:

    defaultFlushModel="Auto|Commit|Never"

- Removed RegisterSessionFactory from ISessionManager

- Used https://svn.sourceforge.net/svnroot/cuyahoga/trunk/Core/Facilities/ as inspiration
  to add support for rebuildable session factories
 
- You can now control the NH's ReflectionOptimizer through the attribute useReflectionOptimizer which goes on the facility node.

- The DefaultSessionManager will always look up for a component "nhibernate.session.interceptor" to use as
  a NH Interceptor
  
- The NH Facility will always look up for a component "nhibernate.sessionfactory.interceptor" and 
  associate the instance with the Configuration.Interceptor before creating the session factories

Version beta 2

- Completely rewritten

Version beta 1

- Test cases simplified by the introduction of facilityconfig.xml

Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file